--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -2,8 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/icons/icon-192.png" />
+    <!-- Apple Home Screen icon -->
+    <link rel="apple-touch-icon" href="/icons/icon-192.png" />
+
+    <!-- Enable PWA / Home-Screen mode -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="UP for a ride" />
+
+    <!-- Manifest -->
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+
     <title>up-for-a-ride</title>
   </head>
   <body>
