--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/icons/icon-192.png" />
+    <link rel="icon" type="image/svg+xml" href="/icons/icon-192.jpeg" />
     <!-- Apple Home Screen icon -->
-    <link rel="apple-touch-icon" href="/icons/icon-192.png" />
+    <link rel="apple-touch-icon" href="/icons/icon-192.jpeg" />
 
     <!-- Enable PWA / Home-Screen mode -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <meta name="apple-mobile-web-app-title" content="UP for a ride" />
+    <meta name="apple-mobile-web-app-title" content="UpForARide" />
 
     <!-- Manifest -->
     <link rel="manifest" href="/manifest.json" />
