--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/icons/icon-192.jpeg" />
+    <link rel="icon" type="image/svg+xml" href="/icons/icon-192.png" />
     <!-- Apple Home Screen icon -->
-    <link rel="apple-touch-icon" href="/icons/icon-192.jpeg" />
+    <link rel="apple-touch-icon" href="/icons/icon-192.png" />
 
     <!-- Enable PWA / Home-Screen mode -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
